# test_for_delete

./: .gitignore  Dockerfile  check.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  test_check.py
.github/workflows/: github-actions-demo.yml
