[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Nikita Zaretski <xal9wIII4ik@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
